fix css overflow

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    border: 1px solid red;
 
 }
 .saturate{
@@ -24,6 +25,8 @@ html{
 
 body {
     background-color: var(--dark-color);
+    width: 100vw;
+    border: 1px solid var(--light-color-300);
     overflow-x: hidden;
 }
 
@@ -65,6 +68,7 @@ header{
     width: 100vw;
     top: 0;
     background-color: var(--dark-color); 
+    border: 1px solid red;
 }
 
 header .logo{
@@ -255,7 +259,6 @@ header .mobile{
     -webkit-text-stroke-color: var(--light-color);
 }
 .hero .hero-content .hero-title{
-
     height: 150px;
     color: var(--light-color);
     font-size: 3em;
@@ -645,7 +648,7 @@ section .section-header .section-text .section-text-btn::before{
 .animation-text{
     border-top: 1px solid var(--light-color-100);
     border-bottom: 1px solid var(--light-color-100);
-    width: 120%;
+    width: 100%;
     left: 0;
     padding-block: 1em;
     position: absolute;
@@ -653,15 +656,13 @@ section .section-header .section-text .section-text-btn::before{
     transform: rotate(-2.55deg);
     background-color: var(--dark-color);
     display: flex;
- 
-    
+    overflow: hidden;
 }
 .animation-text .animation-text-true , .animation-text .animation-text-false{
     white-space: nowrap;
-    position: relative;
+    /* position: relative; */
     top: 20px;
-    /* transform: translate(0, 50%); */
-    
+
 }
 .animation-text .animation-text-true{
     animation: moving-text 30s linear infinite ;
@@ -979,19 +980,12 @@ section .section-content .section-card .section-card-btn button:hover > svg {
         border: none;
         left: 0;
         top: 20%;
-       
-       
-
-        /* transform: translateY(-50%); */
     }
     .btn-arrow .next{
         position: absolute;
         border: none;
         right: 0;
         top: 20%;
-
-  
-        /* transform: translateY(-50%); */
     }
 }
 
@@ -1005,6 +999,9 @@ section .section-content .section-card .section-card-btn button:hover > svg {
     display: flex;
     gap: 30px;
     margin-bottom: 5em;
+    overflow: hidden;
+
+    border: 1px solid red;
 }
 
 .animation-text-true , .animation-text-false{
